--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,10 @@ span:last-child {
 	float: left;
 }
 
+.graph-button:hover {
+	background: #E86D64;
+}
+
 .graph-description {
 	width: 750px;
 	height: 50px;
